--- a/XF.Material.Outline.Sample/XF.Material.Outline.Sample/MainPage.xaml
+++ b/XF.Material.Outline.Sample/XF.Material.Outline.Sample/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:outline="clr-namespace:XF.Material.Outline;assembly=XF.Material.Outline"
+             xmlns:outline="clr-namespace:XF.Material.Outline.Core;assembly=XF.Material.Outline.Core"
              mc:Ignorable="d"
              x:Class="XF.Material.Outline.Sample.MainPage">
 
