Add Text bindable property, add render correct height in helper text/no helper text scenarios, add init methods to ensure control is loaded per platform

--- a/XF.Material.Outline.Sample/XF.Material.Outline.Sample/ControlSamples.xaml
+++ b/XF.Material.Outline.Sample/XF.Material.Outline.Sample/ControlSamples.xaml
@@ -16,7 +16,8 @@
 	            VerticalOptions="Start"
 		        Margin="0,0,0,30"/>
 
-	        <outline:MaterialOutlineTextView 
+	        <outline:MaterialOutlineTextView
+				Text="Text bound in view"
 		        WidthRequest="200" 
 		        HeightRequest="56" 
 		        HorizontalOptions="Center" 
